# odoo-pdf-generator-api

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.rst  ROADMAP.md  pyproject.toml
.claude/skills/backport-release/: SKILL.md
.github/workflows/: ci.yml
data/: ir_config_parameter.xml
models/: __init__.py  pdfgen_api_client.py  res_config_settings.py
pdfgeneratorapi_connector/: README.rst  __init__.py  __manifest__.py  enums.py  fields.py
pdfgeneratorapi_connector/controllers/: webhook.py
pdfgeneratorapi_connector/i18n/: cs.po  de.po  es.po  et.po  fr.po  it.po  pdfgeneratorapi_connector.pot  pt_BR.po  sk.po
pdfgeneratorapi_connector/migrations/17.0.2.0.0/: post-migrate.py
pdfgeneratorapi_connector/models/: __init__.py  account_move.py  pdfgen_api_client.py  pdfgen_async_job.py  pdfgen_document_mixin.py  pdfgen_model_dataset.py  pdfgen_resolver.py  pdfgen_send_mixin.py  pdfgen_template_mapping.py  res_company.py  res_config_settings.py
pdfgeneratorapi_connector/security/: ir.model.access.csv
pdfgeneratorapi_connector/static/description/: index.html
pdfgeneratorapi_connector/static/src/mapping_editor/: droppable_field_selector.js  field_palette.js  field_palette.xml  mapping_editor.scss
pdfgeneratorapi_connector/static/src/settings/: settings.scss
pdfgeneratorapi_connector/static/src/template_editor/: editor_iframe_field.js  editor_iframe_field.xml  template_editor.scss  template_selection_field.js  template_selection_field.xml
pdfgeneratorapi_connector/static/tests/: editor_iframe_field.test.js  field_palette.test.js
pdfgeneratorapi_connector/tests/: __init__.py  test_account_move.py  test_async_dispatch_wizard.py  test_async_job.py  test_coverage_wizard.py  test_generate_pdf_wizard.py  test_library_template_resolution.py  test_model_dataset.py  test_multi_company.py  test_res_config_settings.py  test_send_mixin.py  test_template_editor_wizard.py  test_template_mapping.py  test_webhook_controller.py
pdfgeneratorapi_connector/views/: account_move_views.xml  generate_pdf_wizard_views.xml  mail_compose_message_views.xml  menu.xml  pdfgen_async_dispatch_wizard_views.xml  pdfgen_async_job_views.xml  pdfgen_coverage_wizard_views.xml  pdfgen_model_dataset_views.xml  pdfgen_template_editor_wizard_views.xml  pdfgen_template_mapping_views.xml  res_config_settings_views.xml
pdfgeneratorapi_connector/wizards/: __init__.py  account_move_send.py  generate_pdf_wizard.py  mail_compose_message.py  pdfgen_async_dispatch_wizard.py  pdfgen_coverage_wizard.py  pdfgen_template_editor_wizard.py
pdfgeneratorapi_connector_account/: README.rst  __init__.py  __manifest__.py
pdfgeneratorapi_connector_account/data/: pdfgen_model_dataset_account_move.xml
pdfgeneratorapi_connector_account/i18n/: cs.po  de.po  es.po  et.po  fr.po  it.po  pdfgeneratorapi_connector_account.pot  pt_BR.po  sk.po
pdfgeneratorapi_connector_account/static/description/: index.html
pdfgeneratorapi_connector_account/tests/: __init__.py  test_account_dataset.py  test_account_move.py  test_generate_pdf_wizard.py  test_send_mixin.py
pdfgeneratorapi_connector_account/views/: account_move_send_views.xml  account_move_views.xml
pdfgeneratorapi_connector_account/wizards/: account_move_send.py
pdfgeneratorapi_connector_mrp/: README.rst  __manifest__.py
pdfgeneratorapi_connector_mrp/data/: pdfgen_model_dataset_mrp_production.xml
pdfgeneratorapi_connector_mrp/i18n/: cs.po  de.po  es.po  et.po  fr.po  it.po  pdfgeneratorapi_connector_mrp.pot  pt_BR.po  sk.po
pdfgeneratorapi_connector_mrp/models/: mrp_production.py
pdfgeneratorapi_connector_mrp/static/description/: index.html
pdfgeneratorapi_connector_mrp/tests/: test_mrp_production.py
pdfgeneratorapi_connector_mrp/views/: mrp_production_views.xml
pdfgeneratorapi_connector_purchase/: README.rst  __manifest__.py
pdfgeneratorapi_connector_purchase/data/: pdfgen_model_dataset_purchase_order.xml
pdfgeneratorapi_connector_purchase/i18n/: cs.po  de.po  es.po  et.po  fr.po  it.po  pdfgeneratorapi_connector_purchase.pot  pt_BR.po  sk.po
pdfgeneratorapi_connector_purchase/models/: purchase_order.py
pdfgeneratorapi_connector_purchase/static/description/: index.html
pdfgeneratorapi_connector_purchase/tests/: test_purchase_order.py
pdfgeneratorapi_connector_purchase/views/: purchase_order_views.xml
pdfgeneratorapi_connector_rental/: README.rst  __init__.py  __manifest__.py
pdfgeneratorapi_connector_rental/data/: pdfgen_model_dataset_rental.xml
pdfgeneratorapi_connector_rental/i18n/: cs.po  de.po  es.po  et.po  fr.po  it.po  pdfgeneratorapi_connector_rental.pot  pt_BR.po  sk.po
pdfgeneratorapi_connector_rental/static/description/: index.html
pdfgeneratorapi_connector_sale/: README.rst  __manifest__.py
pdfgeneratorapi_connector_sale/data/: pdfgen_model_dataset_sale_order.xml
pdfgeneratorapi_connector_sale/i18n/: cs.po  de.po  es.po  et.po  fr.po  it.po  pdfgeneratorapi_connector_sale.pot  pt_BR.po  sk.po
pdfgeneratorapi_connector_sale/models/: sale_order.py
pdfgeneratorapi_connector_sale/static/description/: index.html
pdfgeneratorapi_connector_sale/tests/: __init__.py  test_mail_composer.py  test_sale_order.py
pdfgeneratorapi_connector_sale/views/: sale_order_views.xml
pdfgeneratorapi_connector_stock/: README.rst  __manifest__.py
pdfgeneratorapi_connector_stock/data/: pdfgen_model_dataset_stock_picking.xml
pdfgeneratorapi_connector_stock/i18n/: cs.po  de.po  es.po  et.po  fr.po  it.po  pdfgeneratorapi_connector_stock.pot  pt_BR.po  sk.po
pdfgeneratorapi_connector_stock/models/: stock_picking.py
pdfgeneratorapi_connector_stock/static/description/: index.html
pdfgeneratorapi_connector_stock/tests/: test_stock_picking.py
pdfgeneratorapi_connector_stock/views/: stock_picking_views.xml
scripts/: i18n_translate.py
tests_unit/: test_pdfgen_api_client.py  test_pdfgen_resolver.py
views/: account_move_views.xml  generate_pdf_wizard_views.xml  menu.xml  res_config_settings_views.xml
wizards/: __init__.py  generate_pdf_wizard.py
