[project]
name = "pdfgeneratorapi_connector-dev"
version = "0.0.0"
description = "Dev tooling config for the pdfgeneratorapi_connector Odoo addon (not a distributable package)."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pylint-odoo>=9.3",
    "pytest>=8",
    "pytest-cov>=6",
    "coverage[toml]>=7",
    "pre-commit>=4",
    "requests>=2",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["__pycache__", "static/lib", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"__manifest__.py" = ["B018"]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
"tests_unit/*" = ["S101"]

[tool.pylint.master]
load-plugins = "pylint_odoo"
score = "n"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "import-outside-toplevel",
    "broad-exception-caught",
    "broad-exception-raised",
    "unused-argument",
    # `_` / `odoo` imports aren't resolvable in the host lint env — Odoo
    # lives inside the docker image, not in the uv venv.
    "import-error",
    "no-name-in-module",
    # Test fixture setUpClass bodies naturally look similar across addons
    # (same ICP params, same pdfgen.* keys). Disabling the duplicate-code
    # check for tests keeps bridges from tripping it on each new addon.
    "duplicate-code",
    # Tests commonly call `wizard._build_client` / patch `__class__` by
    # design; flagging protected-access adds noise without value.
    "protected-access",
    # `except Exception: pass` appears intentionally in best-effort
    # detail-fetch paths (see pdfgen_coverage_wizard.action_check). We
    # log enough context via `_logger.warning` elsewhere in the call.
    "try-except-raise",
    # `setUpClass`, `setUp`, `tearDown` are stdlib unittest method names;
    # pylint flags them as invalid snake_case.
    "invalid-name",
    # Tests import their production module via `odoo.addons.<name>` for
    # consistency with how Odoo loads them. pylint-odoo prefers relative
    # imports; we follow stock Odoo test style instead.
    "W8150",  # odoo-addons-relative-import — symbol form not recognised
    # Odoo 19 prefers `self.env._()` over the module-level `_()` so the
    # translation gets a context-aware lang. Both work; switching every
    # call site is mechanical noise. Revisit when / if Odoo deprecates
    # the module-level `_()` form.
    "W8161",  # prefer-env-translation
    # Test classes accumulate public test_* methods naturally; the 20-method
    # cap is a code-smell heuristic that doesn't apply to unittest classes.
    "too-many-public-methods",
    # `except Exception: pass` is intentional in best-effort detail
    # fetches (e.g. fetching a template's display name for the coverage
    # wizard). The outer function already returns a well-defined fallback.
    "except-pass",
]
# We deliberately do NOT `enable = ["odoolint"]`. The plugin is loaded via
# `load-plugins = "pylint_odoo"` in the [tool.pylint.master] section above,
# and odoolint checks are enabled individually through pylint's default
# enable-everything behaviour. A blanket `enable = ["odoolint"]` would
# re-enable the specific W8xxx codes we disable above (W8150 / W8120 / etc).

[tool.pylint.odoolint]
manifest-required-authors = "PDF Generator API"
manifest-required-keys = ["license"]
manifest-deprecated-keys = ["description"]
valid-odoo-versions = ["18.0", "19.0"]

[tool.pytest.ini_options]
testpaths = ["tests_unit"]
python_files = "test_*.py"
addopts = "-ra -q --import-mode=importlib"

[tool.coverage.run]
source = [
    "pdfgeneratorapi_connector",
    "pdfgeneratorapi_connector_sale",
    "pdfgeneratorapi_connector_purchase",
    "pdfgeneratorapi_connector_stock",
    "pdfgeneratorapi_connector_mrp",
]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/__manifest__.py",
    "*/tests/*",
    "*/tests_unit/*",
]

[tool.coverage.paths]
source = [
    "pdfgeneratorapi_connector",
    "/mnt/extra-addons/pdfgeneratorapi_connector",
]
sale_bridge = [
    "pdfgeneratorapi_connector_sale",
    "/mnt/extra-addons/pdfgeneratorapi_connector_sale",
]
purchase_bridge = [
    "pdfgeneratorapi_connector_purchase",
    "/mnt/extra-addons/pdfgeneratorapi_connector_purchase",
]
stock_bridge = [
    "pdfgeneratorapi_connector_stock",
    "/mnt/extra-addons/pdfgeneratorapi_connector_stock",
]
mrp_bridge = [
    "pdfgeneratorapi_connector_mrp",
    "/mnt/extra-addons/pdfgeneratorapi_connector_mrp",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
omit = [
    "*/__init__.py",
    "*/__manifest__.py",
    "*/tests/*",
    "*/tests_unit/*",
]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
